# C_Cpp_Practice

./: .clangd  README.md
Clion/: CMakeLists.txt  qodana.yaml
LuoGu/: P1000.c  P1001.c  P1045.c  P1125.cpp  P1200.cpp  P1307.c
Term_1/BJFUOJ/: 20251028_01.c  Diagonal.c
Term_1/Week_1/: c1_1.c  c1_2.c
Term_1/Week_4/: _ch4_2.c
Term_1/Week_7/: ch7.c
Term_1/Week_8/: ConsoleGameC.c
Term_1/Winter/: Class.cpp  Hello.cpp
Term_2/BattleAir/: .clangd  main.cpp
Term_2/BattleAirNeo/: CMakeLists.txt  main.cpp
Term_2/BattleAirNeo/include/: Chick.hpp  GameManager.hpp  string.hpp
Term_2/BattleAirNeo/src/: GameManager.cpp  string.cpp  test.cpp
Term_2/Experiment_1/: A.cpp  B.cpp  C.cpp  C_ai.cpp  D.cpp  E.cpp  F.cpp  G.cpp
Term_2/Experiment_2/: 3.cpp  (+3 more)
Term_2/PlatForm/: .clangd  CMakeLists.txt  CMakePresets.json  README.md  main.cpp
Term_2/PlatForm/.cache/clangd/index/: Game.hpp.141A2B3BB3395B96.idx  Game.hpp.9491EBAD06036A9F.idx  GameState.cpp.4D13649B9960B63B.idx  GameState.hpp.694508FEB34E7127.idx  MenuState.cpp.39D1885477941046.idx  MenuState.cpp.876DFE7283084F95.idx  MenuState.hpp.21255AF644DFFBAB.idx  MenuState.hpp.F5C38616A2EAD548.idx  ResourceManager.hpp.950D54C9FF20EA75.idx  ResourceManager.hpp.ECDCCD8D1617FCF9.idx  State.hpp.0F659BFAEADF8CAF.idx  State.hpp.5D2671EC5C1C7E7C.idx  main.cpp.B849549ECFEDB410.idx  main.cpp.F604B3026B2502D5.idx
Term_2/PlatForm/include/: Game.hpp  GameState.cpp  GameState.hpp  MenuState.cpp  MenuState.hpp  ResourceManager.hpp  State.hpp
Term_2/SDL/: .clangd  CMakeLists.txt  main.cpp
Term_2/SDL/.cache/clangd/index/: main.cpp.0E2CD73DA2182D56.idx
Visual_Studio/: .clangd  CMakeLists.txt  README.md  main.cpp
(+32 files in other folders)
